add select theme in users

--- a/admin.html
+++ b/admin.html
@@ -22,6 +22,7 @@
 			<select id="themes"></select>
 			<!-- <button id="save">Save</button> -->
 			<br /><br />
+
 			<img src="assets/img/ako.jpg" style="width: 8%; border-radius: 50%;" />
 			<label>Rodrigo Galura III - <strong>Admin</strong></label>
 		</div>
@@ -191,15 +192,14 @@
 <script type="text/javascript" src="DataTables-1.10.10/media/js/jquery.dataTables.js"></script>
 <script type="text/javascript" src="DataTables-1.10.10/media/js/dataTables.jqueryui.js"></script>
 
-<script type="text/javascript" src="assets/js/admin.js"></script>
+<!-- put theme list -->
+<script type="text/javascript" src="assets/js/put-theme-list.js"></script>
 
 <script type="text/javascript">
 $( function () {
 $('#tabs').tabs();
 
 $('#users-score').DataTable();
-
-$('#users-score2').DataTable();
 });
 </script>
 </body>
