--- a/users.html
+++ b/users.html
@@ -15,6 +15,10 @@
 <div id="wrapper">
 	<div id="header" class="ui-widget ui-widget-content ui-corner-top">
 		<div class="left">
+			<select id="themes"></select>
+			<!-- <button id="save">Save</button> -->
+			<br /><br />
+
 			<img src="assets/img/ako.jpg" style="width: 8%; border-radius: 50%;" />
 			<label>Rodrigo Galura III</label>
 		</div>
@@ -46,6 +50,9 @@
 <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
 
 <script type="text/javascript" src="assets/js/jquery-button-vertical.js"></script>
+
+<!-- put theme list -->
+<script type="text/javascript" src="assets/js/put-theme-list.js"></script>
 
 <!-- initialize -->
 <script type="text/javascript">
