create register user page

--- a/register.html
+++ b/register.html
@@ -8,26 +8,34 @@
 	<link rel="stylesheet" type="text/css" href="jquery-ui-themes-1.11.4/themes/sunny/jquery-ui.min.css" />
 
 	<link rel="stylesheet" type="text/css" href="assets/css/jquery-custom.css" />
-	<link rel="stylesheet" type="text/css" href="assets/css/login.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/register.css" />
 </head>
 <body>
 
 <div id="wrapper">
 	<div class="ui-widget ui-widget-content ui-corner-all">
-		<h2 class="ui-widget-header">Login</h2>
+		<h2 class="ui-widget-header">Register</h2>
 		<div class="ui-widget-content">
 			<form>
-				<table cellspacing="10" id="table-login">
+				<table cellspacing="10" id="table-add-user">
+					<tr>
+						<td><label for="fname">Firstname</label></td>
+						<td><input type="text" name="fname" id="fname" required /></td>
+					</tr>
+					<tr>
+						<td><label for="lname">Lastname</label></td>
+						<td><input type="text" name="lname" id="lname" required /></td>
+					</tr>
 					<tr>
 						<td><label for="username">Username</label></td>
-						<td><input type="text" name="username" id="username" required /></td>
+						<td><input type="text" name="username" id="username" minlength="3" required /></td>
 					</tr>
 					<tr>
 						<td><label for="password">Password</label></td>
-						<td><input type="text" name="password" id="password" required /></td>
+						<td><input type="text" name="password" id="password" minlength="8" required /></td>
 					</tr>
 					<tr>
-						<td><button id="jquery-btn" class="ui-state-default">Login</button></td>
+						<td><button id="jquery-btn" class="ui-state-default">Create User</button></td>
 					</tr>
 				</table>
 			</form>
