--- a/register.html
+++ b/register.html
@@ -14,7 +14,9 @@
 
 <div id="wrapper">
 	<div class="ui-widget ui-widget-content ui-corner-all">
-		<h2 class="ui-widget-header">Register</h2>
+		<h2 class="ui-widget-header">Register
+			<span>Already Register ? <a href="#">Login</a></span>
+		</h2>
 		<div class="ui-widget-content">
 			<form>
 				<table cellspacing="10" id="table-add-user">
