--- a/admin.html
+++ b/admin.html
@@ -14,6 +14,13 @@
 	<link rel="stylesheet" type="text/css" href="DataTables-1.10.10/media/css/dataTables.jqueryui.css">
 	<script type="text/javascript" src="DataTables-1.10.10/media/js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="DataTables-1.10.10/media/js/dataTables.jqueryui.js"></script>
+	<!-- To work proper the columnFilter function -->
+	<script type="text/javascript" src="DataTables-1.10.10/jquery.dataTables.yadcf.js"></script>
+
+	<!-- Select2 plugins -->
+	<link rel="stylesheet" type="text/css" href="select2/css/select2.min.css">
+	<script type="text/javascript" src="select2/js/select2.min.js"></script>
+
 
 	<link rel="stylesheet" type="text/css" href="assets/css/jquery-custom.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/admin.css" />
@@ -82,6 +89,7 @@
 					<table id="quiz-list" class="display cell-border">
 						<thead>
 							<tr>
+								<th>Subjects</th>
 								<th>Questions</th>
 								<th>Choices</th>
 								<th>Correct Answer</th>
@@ -89,6 +97,20 @@
 						</thead>
 						<tbody>
 							<tr>
+								<td align="center">English</td>
+								<td>Ano ang ano ?</td>
+								<td>
+									<ol type="A">
+										<li>Hmm ano daw ? hahe</li>
+										<li>Edi wow</li>
+										<li>:p</li>
+										<li>Kapal mo</li>
+									</ol>
+								</td>
+								<td align="center">B</td>
+							</tr>
+							<tr>
+								<td align="center">Math</td>
 								<td>Ano ang ano ?</td>
 								<td>
 									<ol type="A">
@@ -101,18 +123,7 @@
 								<td align="center">A</td>
 							</tr>
 							<tr>
-								<td>Ano ang ano ?</td>
-								<td>
-									<ol type="A">
-										<li>Hmm ano daw ? hahe</li>
-										<li>Edi wow</li>
-										<li>:p</li>
-										<li>Kapal mo</li>
-									</ol>
-								</td>
-								<td align="center">A</td>
-							</tr>
-							<tr>
+								<td align="center">Science</td>
 								<td>Ano ang ano ?</td>
 								<td>
 									<ol type="A">
@@ -125,6 +136,14 @@
 								<td align="center">A</td>
 							</tr>
 						</tbody>
+						<tfoot>
+							<tr>
+								<th>Subjects</th>
+								<th>Questions</th>
+								<th>Choices</th>
+								<th>Answers</th>
+							</tr>
+						</tfoot>
 					</table>
 				</div>
 			</div>
@@ -145,12 +164,33 @@
 
 <script type="text/javascript">
 $( function () {
-$('#tabs').tabs({active: 2});
 
+$('#tabs').tabs({active: 1});
 $('#theme-list1, #theme-list2, #theme-list3').menu();
 
-$('#user-list, #quiz-list').DataTable();
+$('select').select2();
+
+$('#user-list').DataTable();
+
+$('#quiz-list').dataTable()
+			   .yadcf([
+			   			{
+			   				column_number: 0,
+			   				filter_reset_button_text: false,
+			   				select_type_options: {
+			   					placeholder: "Select",
+			   					allowClear: true
+			   				}
+			   			}, {
+			   				column_number: 1,
+			   				filter_reset_button_text: false
+			   			}, {
+			   				column_number: 3,
+			   				filter_reset_button_text: false
+			   			}
+			   	]);
 });
 </script>
+
 </body>
 </html>
